Комит перед рефакторингом ProfileDictionary

--- a/SCME.ProfileBuilder/CommonPages/ConnectPage.xaml
+++ b/SCME.ProfileBuilder/CommonPages/ConnectPage.xaml
@@ -42,7 +42,7 @@
                     </StackPanel>
                 </TabItem.Header>
                 <TabItem.Content>
-                    <customControls:AccentAndThemeUserControl/>
+                    <customControls:AccentAndThemeUserControl DataContext="{Binding AccentAndThemeUserControlVM}"/>
                 </TabItem.Content>
             </TabItem>
         </TabControl>
