--- a/SCME.ProfileBuilder/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.ProfileBuilder/CustomControl/ListBoxTestParameters.xaml
@@ -430,7 +430,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="45*" />
                                         <ColumnDefinition Width="10*" />
-                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="50" />
                                         <ColumnDefinition Width="45*" />
                                         <ColumnDefinition Width="10*" />
                                     </Grid.ColumnDefinitions>
@@ -455,10 +455,10 @@
                                 <Grid Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="5"
                                       Visibility="{Binding MeasurementMode, ConverterParameter=0, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="45*" />
                                         <ColumnDefinition Width="10*" />
-                                        <ColumnDefinition Width="100" />
-                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="50" />
+                                        <ColumnDefinition Width="45*" />
                                         <ColumnDefinition Width="10*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
@@ -468,14 +468,14 @@
                                            Content="{x:Static res:Resources.MaxIdrm_mA}"
                                            Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
                                     <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right"
-                                           Content="{Binding IDRM, ElementName=profilesList}"
+                                           Content="{Binding IDRM}"
                                            Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
 
                                     <Label Grid.Column="3" Grid.Row="0" Margin="0,0,0,0"
                                            Content="{x:Static res:Resources.MaxIrrm_mA}"
                                            Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
                                     <Label Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right"
-                                           Content="{Binding IRRM, ElementName=profilesList}"
+                                           Content="{Binding IRRM}"
                                            Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
 
