--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -1,18 +1,18 @@
-﻿<UserControl x:Class="SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents.AddTestParametrUserControl"
+﻿<UserControl x:Class="SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents.AddTestParameterUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:customControl="clr-namespace:SCME.WpfControlLibrary.CustomControls"
              xmlns:local="clr-namespace:SCME.WpfControlLibrary"
+             xmlns:profile="clr-namespace:SCME.Types.Profiles;assembly=SCME.Types"
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
              xmlns:dataProviders="clr-namespace:SCME.WpfControlLibrary.DataProviders"
-             mc:Ignorable="d" d:DesignWidth="800">
+             mc:Ignorable="d" d:DesignWidth="800" d:DataContext="{d:DesignInstance profile:ProfileDeepData}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -32,24 +32,18 @@
 
             <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}"/>
             <ComboBox Grid.Column="1" Grid.Row="0" 
-                                      ItemsSource="{Binding Source={StaticResource DataFromCommutationModeEnum}}"
-                                      SelectedItem="{Binding SelectedItem.ParametersComm, Converter={StaticResource E2S}, ElementName=treeViewProfiles, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                      ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}"
+                                      SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" />
             <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
             <customControl:NumericUpDown Grid.Column="3" Grid.Row="0" Value="{Binding ParameterClamp}" />
 
             <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.ParameterType}"/>
-            <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{x:Static dataProviders:TestParameterDictionary.TestParametersList}" DisplayMemberPath="Name" SelectedValuePath="TestParametersType" 
-                      SelectedValue="{Binding Path=SelectedParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-                <!--<ComboBoxItem Content="Gate"></ComboBoxItem>
-                <ComboBoxItem Content="VTM"></ComboBoxItem>
-                <ComboBoxItem Content="BVT"></ComboBoxItem>
-                <ComboBoxItem Content="dVdt"></ComboBoxItem>
-                <ComboBoxItem Content="ATU"></ComboBoxItem>
-                <ComboBoxItem Content="QrrTq"></ComboBoxItem>
-                <ComboBoxItem Content="RAC"></ComboBoxItem>
-                <ComboBoxItem Content="TOU"></ComboBoxItem>-->
+            <ComboBox Grid.Column="1" Grid.Row="1" 
+                      ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" 
+                      DisplayMemberPath="Key" SelectedValuePath="Value" 
+                      SelectedValue="{Binding Path=Vm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type customControl:ProfilesPage}}}">
             </ComboBox>
-            <Button Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"/>
+            <Button Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"/>
             <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.Height_Prof}" />
             <customControl:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding Height}" />
             <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.Temp}" />
