--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
@@ -4,7 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:mahappsControls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
              xmlns:qrrTq="clr-namespace:SCME.Types.QrrTq;assembly=SCME.Types"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=qrrTq:TestParameters}"
@@ -12,7 +11,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -45,7 +44,7 @@
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding DCPulseWidth}" />
 
         <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.QrrTqDCRiseRate}" />
-        <mahappsControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding DCRiseRate}" />
+        <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding DCRiseRate}" />
 
         <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.QrrTqDCFallRate}" />
         <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Source={StaticResource TDcFallRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DCFallRate}" />
